force-app/main/default/objects/SFDC_Investment__c/SFDC_Investment__c.object-meta.xml
<CustomObject>
    <description>Investments made by Investors in Target Companies.</description>
    <label>Investment</label>
    <nameField>
        <label>Investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>