force-app/main/default/objects/SFDC_Investment__c/fields/Amount_Invested_M__c.field-meta.xml
<CustomField>
    <fullName>Amount_Invested_M__c</fullName>
    <description>The amount of the investment made by the Investor in the Target Company.</description>
    <label>Amount Invested ($M)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>