force-app/main/default/objects/SFDC_Investment__c/fields/Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Board_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The representative from the Investor who is responsible for the Investment.</description>
    <label>Board Member</label>
    <referenceTo>SFDC_Investor_Contact__c</referenceTo>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>