force-app/main/default/objects/SFDC_Investment__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for the Target Company in which the Investment was made.</description>
    <label>Company</label>
    <referenceTo>SFDC_Target_Company__c</referenceTo>
    <relationshipName>Investments</relationshipName>
    <type>Lookup</type>
</CustomField>