force-app/main/default/objects/SFDC_Investment__c/fields/Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Investment_Date__c</fullName>
    <description>Date of the most recent investment.</description>
    <label>Investment Date</label>
    <type>Date</type>
</CustomField>