force-app/main/default/objects/SFDC_Investment__c/fields/Lead_Investor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Investor has ever led a funding round in the Target Company.</description>
    <label>Lead Investor</label>
    <type>Checkbox</type>
</CustomField>